--- a/Chat_Library/Chat_Library.csproj
+++ b/Chat_Library/Chat_Library.csproj
@@ -49,7 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\iUserProvider.cs" />
+    <Compile Include="Abstract\iMsgRepository.cs" />
+    <Compile Include="Abstract\iSenderRepository.cs" />
+    <Compile Include="Abstract\iUserContactList.cs" />
+    <Compile Include="Abstract\iUserRepository.cs" />
+    <Compile Include="Concrete\ContactsRepository.cs" />
+    <Compile Include="Concrete\MsgRepository.cs" />
+    <Compile Include="Concrete\SenderRepository.cs" />
+    <Compile Include="Concrete\UserRepository.cs" />
     <Compile Include="DBData.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
