--- a/ChatBLL/packages.config
+++ b/ChatBLL/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bridge.Core" version="16.8.1" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="package.mscorlib" version="1.0.1" targetFramework="net461" />
   <package id="Retyped.Core" version="1.4.6556" targetFramework="net461" />
   <package id="Retyped.dom" version="2.3.6589" targetFramework="net461" />
   <package id="Retyped.ent" version="2.2.6556" targetFramework="net461" />
