--- a/ChatClient/App.config
+++ b/ChatClient/App.config
@@ -19,4 +19,7 @@
             </endpoint>
         </client>
     </system.serviceModel>
+  <connectionStrings>
+    <add name="Context" connectionString="metadata=res://*/DBData.csdl|res://*/DBData.ssdl|res://*/DBData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=arikatamo.database.windows.net;initial catalog=Chat;user id=arikatamo;password=As8rgd759648*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
