--- a/ChatHost/App.config
+++ b/ChatHost/App.config
@@ -1,11 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-
   <system.serviceModel>
-
     <behaviors>
       <serviceBehaviors>
         <behavior name="mexBeh">
@@ -14,19 +16,30 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-
     <services>
       <service name="ChatService.Service" behaviorConfiguration="mexBeh">
-        <endpoint address="" binding="netTcpBinding" contract="ChatService.IServiceChat">
-        </endpoint>
+        <endpoint address="" binding="netTcpBinding" contract="ChatService.IServiceChat"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8301"/>
-            <add baseAddress="net.tcp://localhost:8302"/>
+            <add baseAddress="http://localhost:8301" />
+            <add baseAddress="net.tcp://localhost:8302" />
           </baseAddresses>
         </host>
       </service>
     </services>
   </system.serviceModel>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="Context" connectionString="metadata=res://*/DBData.csdl|res://*/DBData.ssdl|res://*/DBData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=arikatamo.database.windows.net;initial catalog=Chat;user id=arikatamo;password=As8rgd759648*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
