--- a/ChatService/app.config
+++ b/ChatService/app.config
@@ -1,28 +1,45 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <system.serviceModel>
-        <behaviors>
-            <serviceBehaviors>
-                <behavior name="">
-                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-                    <serviceDebug includeExceptionDetailInFaults="false" />
-                </behavior>
-            </serviceBehaviors>
-        </behaviors>
-        <services>
-            <service name="ChatService.Service">
-                <endpoint address="" binding="basicHttpBinding" contract="ChatService.IService">
-                    <identity>
-                        <dns value="localhost" />
-                    </identity>
-                </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-                <host>
-                    <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/ChatService/Service/" />
-                    </baseAddresses>
-                </host>
-            </service>
-        </services>
-    </system.serviceModel>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service name="ChatService.Service">
+        <endpoint address="" binding="basicHttpBinding" contract="ChatService.IServiceChat">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/ChatService/Service/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <connectionStrings>
+    <add name="Context" connectionString="metadata=res://*/DBData.csdl|res://*/DBData.ssdl|res://*/DBData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=arikatamo.database.windows.net;initial catalog=Chat;user id=arikatamo;password=As8rgd759648*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
