--- a/ChatClient/App.config
+++ b/ChatClient/App.config
@@ -11,10 +11,10 @@
         </bindings>
         <client>
             <endpoint address="net.tcp://localhost:8302/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IServiceChat" contract="Service.IServiceChat"
+                bindingConfiguration="NetTcpBinding_IServiceChat" contract="ServiceReference1.IServiceChat"
                 name="NetTcpBinding_IServiceChat">
                 <identity>
-                    <userPrincipalName value="DESKTOP-QPKVBFO\vital" />
+                    <userPrincipalName value="DESKTOP-126N0RJ\Arikatamo" />
                 </identity>
             </endpoint>
         </client>
