--- a/ChatService/ChatService.csproj
+++ b/ChatService/ChatService.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
     <Compile Include="ServiceUser.cs" />
+    <Compile Include="UserChat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
